--- a/homepage/home.css
+++ b/homepage/home.css
@@ -37,26 +37,80 @@ header {
   width: 90%;
   margin-top: 1%;
   height: 35px;
+  border: none;
+}
+
+#search-box button {
+  display: inline-block;
+  position: absolute;
+  height: 3.7%;
+  color: rgb(40, 116, 241);
+  margin-top: 4px;
+  background-color: white;
+  margin-left: -1;
+  border: none;
+  border-radius: 0;
 }
 
 #login {
-  width: 10%;
-  margin-left: 15%;
+  width: 25%;
+  margin-left: 6%;
+  margin-top: 0.5%;
+  border: none;
 }
+
+#login button {
+  background-color: white;
+  border: none;
+  height: 65%;
+  width: 100px;
+  font-size: 17px;
+  font-weight: bold;
+  color: rgb(40, 116, 241);
+}
+
 /* top-strip */
 #top-strip {
-  height: 125px;
-  border: 2px solid rgb(0, 255, 51);
+  display: inline-block;
+}
+
+.strip-icons {
+  float: left;
+}
+#strip-container {
+  margin-left: 8%;
+}
+
+.strip-icons img {
+  height: 100%;
+  width: 100%;
+  margin-left: -20%;
 }
 /* slider */
 #slider {
   height: 200px;
   border: 2px solid rgb(255, 0, 162);
 }
+#slider > img {
+  width: 100%;
+  height: 200px;
+  border: 2px solid rgb(255, 0, 162);
+}
+
 /* deal */
-#deal {
-  height: 400px;
-  border: 2px solid rgba(233, 141, 50);
+.deal {
+  height: 350px;
+  margin: 2%;
+  width: 95%;
+  box-shadow: 10px 20px 10px gray;
+}
+
+.dealItem {
+  height: 250px;
+  width: 200px;
+  background-color: hotpink;
+  margin-left: 4%;
+  float: left;
 }
 /* mdeal */
 #mdeal {
