--- a/homepage/home.css
+++ b/homepage/home.css
@@ -137,5 +137,29 @@ header {
 /* footer */
 footer {
   height: 400px;
-  border: 2px solid rgba(27, 225, 235);
+  background-color: #172337;
+  width: 100%;
+  color: white;
+  text-align: center;
+}
+
+#mainFoot {
+  margin-left: 50px;
+  width: 100%;
+  display: inline-block;
+}
+.footCol {
+  height: 300px;
+  width: 15%;
+  float: left;
+  margin: 2%;
+}
+
+.footCol h5 {
+  color: grey;
+}
+
+.footCol a {
+  display: block;
+  line-height: 1.5;
 }
