--- a/homepage/home.css
+++ b/homepage/home.css
@@ -79,14 +79,14 @@ header {
 .strip-icons {
   float: left;
 }
-#strip-container {
-  margin-left: 8%;
-}
+/* #strip-container {
+  /* margin-left: 8%; */
+} */
 
 .strip-icons img {
   height: 100%;
   width: 100%;
-  margin-left: -20%;
+  /* margin-left: -20%; */
 }
 /* slider */
 #slider {
