--- a/listingpage/home.css
+++ b/listingpage/home.css
@@ -8,6 +8,40 @@ header {
   background-color: #2874f0;
   display: flex;
 }
+
+#mainsection {
+  border-color: red 10px;
+  width: 100%;
+  height: 1500px;
+}
+
+#filterBox {
+  height: 280px;
+  max-width: 280px;
+  padding: 0px 10px 0px 0px;
+  border: 1px solid blue;
+}
+
+#showText {
+  height: 300px;
+  max-width: 280px;
+  padding: 0px 10px 0px 0px;
+  border: 1px solid rgb(255, 0, 128);
+  float: right;
+  border: 1px solid blue;
+}
+
+#dataFilter {
+  height: 300px;
+  float: right;
+  border: 1px solid blue;
+}
+
+#productListing {
+  border: violet;
+  height: 300px;
+}
+
 #logo {
   width: 90px;
   margin-left: 10%;
@@ -81,7 +115,6 @@ header {
 }
 /* #strip-container {
   /* margin-left: 8%; */
-} */
 
 .strip-icons img {
   height: 100%;
